--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -33,7 +33,7 @@ jobs:
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git pull origin main
           git checkout -B update-dependencies
-          UPDATED_DEPENDENCIES=$(bunx taze -w)
+          UPDATED_DEPENDENCIES=$(bunx taze -w | jq -R -s .)
           echo "$UPDATED_DEPENDENCIES"
           git add package.json bun.lock
           git commit -m "chore(deps): update dependencies" || true
@@ -41,5 +41,5 @@ jobs:
           IS_EXISTING=$(curl -sL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls?head=update-dependencies" | bunx json -a head.ref | grep "update-dependencies" | xargs)
           if [[ -z $IS_EXISTING ]]; then
             curl -sL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"  "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls" \
-              -d "{\"title\": \"chore(deps): update dependencies\", \"head\": \"update-dependencies\", \"base\": \"main\", \"body\": \"$(echo \"$UPDATED_DEPENDENCIES\" | bunx jsesc -q)\"}"
+              -d "{\"title\": \"chore(deps): update dependencies\", \"head\": \"update-dependencies\", \"base\": \"main\", \"body\": $UPDATED_DEPENDENCIES}"
           fi
