--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -33,7 +33,7 @@ jobs:
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git pull origin main
           git checkout -B update-dependencies
-          UPDATED_DEPENDENCIES=$(bunx taze -w | jq -R .)
+          UPDATED_DEPENDENCIES=$(bunx taze -w | jq -s .)
           echo "$UPDATED_DEPENDENCIES"
           git add package.json bun.lock
           git commit -m "chore(deps): update dependencies" || true
