--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -33,13 +33,12 @@ jobs:
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git pull origin main
           git checkout -B update-dependencies
-          UPDATED_DEPENDENCIES=$(bunx taze -w | jq -s .)
-          echo "$UPDATED_DEPENDENCIES"
+          bun update
           git add package.json bun.lock
           git commit -m "chore(deps): update dependencies" || true
           git push -f origin update-dependencies
           IS_EXISTING=$(curl -sL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls?head=update-dependencies" | bunx json -a head.ref | grep "update-dependencies" | xargs)
           if [[ -z $IS_EXISTING ]]; then
             curl -sL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"  "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls" \
-              -d "{\"title\": \"chore(deps): update dependencies\", \"head\": \"update-dependencies\", \"base\": \"main\", \"body\": $UPDATED_DEPENDENCIES}"
+              -d "{\"title\": \"chore(deps): update dependencies\", \"head\": \"update-dependencies\", \"base\": \"main\", \"body\": \"This PR updates the dependencies.\"}"
           fi
