--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -44,5 +44,5 @@ jobs:
               -d "{\"title\": \"chore(deps): update dependencies\", \"head\": \"update-dependencies\", \"base\": \"main\", \"body\": \"Automatically generated PR to update dependencies.\"}"
           else
             curl -sL -X PATCH -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "$PR_URL" \
-              -d "{\"title\": \"chore(deps): update dependencies\", \"body\": \"Automatically updated PR to update dependencies.\"}"
+              -d "{\"title\": \"chore(deps): update dependencies\", \"body\": \"New changes have been detected in the dependencies. This PR has been updated to reflect the changes.\"}"
           fi
