--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-  # schedule:
-  #   - cron: "0 0 * * *"
+  schedule:
+    - cron: "0 0 * * *"
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -37,12 +37,5 @@ jobs:
           git add package.json bun.lock
           git commit -m "chore(deps): update dependencies" || true
           git push -f origin update-dependencies
-          PR_URL=$(curl -sL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls?head=update-dependencies" | bunx json -a html_url)
-          echo $PR_URL
-          if [[ -z $PR_URL ]]; then
-            curl -sL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"  "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls" \
-              -d "{\"title\": \"chore(deps): update dependencies\", \"head\": \"update-dependencies\", \"base\": \"main\", \"body\": \"Automatically generated PR to update dependencies.\"}"
-          else
-            curl -sL -X PATCH -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "$PR_URL" \
-              -d "{\"title\": \"chore(deps): update dependencies\", \"body\": \"New changes have been detected in the dependencies. This PR has been updated to reflect the changes.\"}"
-          fi
+          curl -sL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"  "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls" \
+            -d "{\"title\": \"chore(deps): update dependencies\", \"head\": \"update-dependencies\", \"base\": \"main\", \"body\": \"Automatically generated PR to update dependencies.\"}"
