--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -1,15 +1,13 @@
 name: Update Dependencies
 
 on:
-  push:
-    branches:
-      - main
   schedule:
     - cron: "0 0 * * *"
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions:
+  contents: write
   pull-requests: write
 
 jobs:
