chore: tweaks to release.yml ~ 1 file 3+ 1-
.github/workflows/release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,8 @@ on:
       - "**"
   issue_comment:
     types: [created]
+  pull_request:
+    types: [opened]
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -26,7 +28,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.commits.id || github.sha }}
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Setup Node
         uses: actions/setup-node@v4
