--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
           LATEST_VERSION=$(echo $VERSIONS | bunx json latest)
           if [[ $GITHUB_EVENT_NAME == 'issue_comment' ]]; then
             PR_NUMBER=$(echo "${{ github.event.issue.pull_request.url }}" | grep -o '[0-9]*$')
-            git checkout $(curl -fsSL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER/commits" | jq -r '.[-1].sha')
+            git checkout $(curl -fsSL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER/commits" | bunx json -a -1 sha)
             TAG="test"
             RELEASE_VERSION="0.0.0-$(openssl rand -hex 7)"
           elif [[ $PACKAGE_VERSION != $LATEST_VERSION ]]; then
