--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,9 +47,10 @@ jobs:
           LATEST_VERSION=$(echo $VERSIONS | bunx json latest)
           if [[ $GITHUB_EVENT_NAME == 'issue_comment' ]]; then
             PR_NUMBER=$(echo "${{ github.event.issue.pull_request.url }}" | grep -o '[0-9]*$')
-            SHA=$(git checkout $(curl -fsSL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER/commits" | bunx json -a -1 sha)
+            LATEST_COMMIT_SHA=$(curl -fsSL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER/commits" | jq -r '.[-1].sha')
+            git checkout $LATEST_COMMIT_SHA
             TAG="test"
-            RELEASE_VERSION="0.0.0-$SHA"
+            RELEASE_VERSION="0.0.0-$LATEST_COMMIT_SHA"
           elif [[ $PACKAGE_VERSION != $LATEST_VERSION ]]; then
             RELEASE_VERSION=$PACKAGE_VERSION
             HAS_TAG=$(echo $PACKAGE_VERSION | grep -o '[a-zA-Z]*' | head -n 1)
@@ -62,7 +63,6 @@ jobs:
           fi
 
           bunx json -I -f package.json -e "this.version=\"$RELEASE_VERSION\""
-
           bun install --frozen-lockfile
           bun run build
           npm publish --provenance --access public --no-git-checks --tag $TAG
