--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,12 @@ jobs:
           bunx json -I -f package.json -e "this.version=\"$RELEASE_VERSION\""
           bun install --frozen-lockfile
           bun run build
+          bunx json -I -f package.json -e 'delete this.scripts'
+          bunx json -I -f package.json -e 'delete this["simple-git-hooks"]'
+          bunx json -I -f package.json -e 'delete this.commitlint'
+          bunx json -I -f package.json -e 'delete this["lint-staged"]'
+          bunx json -I -f package.json -e 'delete this.prettier'
+          bunx json -I -f package.json -e 'delete this.devDependencies'
           npm publish --provenance --access public --no-git-checks --tag $TAG
 
           PACKAGE_URL="https://www.npmjs.com/package/$PACKAGE_NAME/v/$RELEASE_VERSION"
