--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "url": "https://nrjdalal.com"
   },
   "type": "module",
-  "exports": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "bin": "./dist/bin/index.js",
+  "exports": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
+  "bin": "./dist/bin/index.mjs",
   "files": [
     "dist"
   ],
   "scripts": {
-    "bin": "tsup && node dist/bin/index.js",
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "bin": "tsdown && node dist/bin/index.mjs",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "prepare": "npx simple-git-hooks"
   },
   "simple-git-hooks": {
@@ -37,7 +37,7 @@
   },
   "lint-staged": {
     "*": "prettier --write --ignore-unknown",
-    "package.json": "sort-package-json"
+    "package.mjson": "sort-package-json"
   },
   "prettier": {
     "plugins": [
@@ -54,7 +54,7 @@
     "prettier": "^3.5.3",
     "simple-git-hooks": "^2.13.0",
     "sort-package-json": "^3.2.1",
-    "tsup": "^8.5.0",
+    "tsdown": "^0.16.4",
     "typescript": "^5.8.3"
   }
 }
